--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -5,28 +5,18 @@ on:
     branches: [main]
 jobs:
   prerelease:
-    strategy:
-      fail-fast: false
-      matrix:
-        terraform-version:
-          - "1.0"
-          - "1.1"
-          - "1.2"
-          # - "1.3" can't use module_variable_optional_attrs
-          # - "1.4"
-          # - "latest"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: ${{ matrix.terraform-version }}
+          terraform_version: 1.0.4
       - uses: actions/cache@v2
         with:
           path: ./.terraform/providers
-          key: ${{ runner.os }}-${{ matrix.terraform-version }}-providers-${{ hashFiles('**/.terraform.lock.hcl') }}
+          key: ${{ runner.os }}-providers-${{ hashFiles('**/.terraform.lock.hcl') }}
           restore-keys: |
-            ${{ runner.os }}-${{ matrix.terraform-version }}-providers-
+            ${{ runner.os }}-providers-
       - run: terraform init
       - run: terraform fmt -check -recursive -diff
       - run: terraform validate
@@ -36,8 +26,7 @@ jobs:
           chmod +x terraform-docs
         working-directory: .terraform
       - run: ./.terraform/terraform-docs markdown . --output-file README.md
-      - if: ${{ matrix.terraform-version == '1.0' }}
-        uses: scaffoldly/bump-version-action@v1
+      - uses: scaffoldly/bump-version-action@v1
         with:
           action: prerelease
           version-file: sly.json
